# contextualtrustprotocol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ctp.toml.example  rust-toolchain.toml
ctp-challenge/: Cargo.toml
ctp-challenge/src/: lib.rs  registry.rs
ctp-challenge/src/rules/: data_driven.rs  encoding.rs  homoglyph.rs  mod.rs
ctp-challenge/tests/: corpus.rs  latency.rs
ctp-core/: Cargo.toml
ctp-core/src/: config.rs  error.rs  lib.rs  payload.rs  traits.rs  verdict.rs
ctp-guard/: Cargo.toml  build.rs
ctp-guard/grammar/: verdict.gbnf
ctp-guard/prompts/: guard_system_v1.txt
ctp-guard/src/: grammar.rs  inference.rs  lib.rs  main.rs  parse.rs  server.rs
ctp-guard/tests/: uds_roundtrip.rs
ctp-kernel/: Cargo.toml
ctp-kernel/src/: ledger.rs  lib.rs
ctp-kernel/tests/: pipeline.rs
ctp-orchestrator/: Cargo.toml  build.rs
ctp-orchestrator/examples/: bench_client.rs
ctp-orchestrator/src/: grpc.rs  guard_client.rs  lib.rs  main.rs  metrics.rs  pipeline.rs
ctp-orchestrator/tests/: e2e.rs
deploy/: ctp-guard.service
docs/adr/: 0001-typestate-pipeline.md  0002-gbnf-over-prompt-constraint.md  0003-guard-process-isolation.md  0004-raw-payload-over-extracted-intents.md  0005-bidirectional-vetting.md  0006-anomaly-decay-and-floor.md  0007-ctperror-fail-closed.md  0008-toolfailed-inbound-channel.md  0009-layerreport-encapsulation.md  0010-rust-tonic-uds-stack.md  0011-deny-by-default-config.md  0012-gateway-vs-kernel-enforcement.md  0013-flags-are-non-decisional.md  README.md
docs/benchmarks/: 2026-06-cpu-qwen.md  2026-06-gpu-vulkan.md
payloads/: benign.txt  injections.txt
proto/: guard.proto  orchestrator.proto
scripts/: bench.sh  setup.sh
