[package]
name = "ctp-core"
description = "Shared types, traits and errors for the Contextual Trust Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
