[package]
name = "ctp-guard"
description = "CTP Layer 2: air-gapped guard-LLM process (UDS-only, GBNF-constrained verdicts)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[features]
default = []
# Real inference via llama.cpp (builds native code through llama-cpp-sys-2).
# Off by default: tests and CI run against the deterministic mock backend.
llama = ["dep:llama-cpp-2"]

[dependencies]
ctp-core.workspace = true
async-trait.workspace = true
llama-cpp-2 = { workspace = true, optional = true }
prost.workspace = true
sd-notify.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "signal", "io-util", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
toml.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
hyper-util.workspace = true
tower.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

[lints]
workspace = true
