[package]
name = "ctp-orchestrator"
description = "CTP Layer 4: system gateway composing challenge, guard and kernel into one endpoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
ctp-core.workspace = true
ctp-challenge.workspace = true
ctp-kernel.workspace = true
async-trait.workspace = true
hyper-util.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time", "signal", "io-util", "sync"] }
tokio-stream = { workspace = true, features = ["net"] }
toml.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
ctp-guard.workspace = true
tempfile.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

[lints]
workspace = true
